--- a/.github/workflows/testbench.yml
+++ b/.github/workflows/testbench.yml
@@ -6,7 +6,7 @@ name: GHDL Testbench
 on: [push]
 jobs:
   Student-Testbench:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     timeout-minutes: 5
     steps:
       - name: Setup GHDL nightly
